# mantle-usd

./: .gitmodules  README.md
backend/API/: .dockerignore  .env.example  Dockerfile  README.md  api.http  guest_code_for_zk_proof.elf
backend/API/host/: Cargo.toml
backend/API/host/src/: cache.rs  elf_server.rs  main.rs  pinata.rs  policy.rs  proof_submitter.rs  types.rs  utils.rs
backend/API/methods/: Cargo.toml
backend/subgraph/: README.md  package.json  schema.graphql  subgraph.yaml
backend/subgraph/abis/: ERC20.json  RWAPool.json  RWAPoolFactory.json  SuperStake.json  mUSD.json
backend/subgraph/src/: helpers.ts  musd.ts  position.ts  rwaPool.ts  rwaPoolFactory.ts  superStake.ts
frontend/: .env.example  README.md  codegen.ts  next.config.ts  package-lock.json  package.json
frontend/src/abis/: ERC20.json  MUSD.json  RWAPool.json  RWAPoolFactory.json  SuperStake.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ComplianceModal.tsx  Header.tsx  NetworkGuard.tsx  StatCard.tsx  Toast.tsx
frontend/src/config/: constants.ts  index.ts
frontend/src/context/: index.tsx
frontend/src/hooks/: useContract.ts  useERC20.ts  useMETH.ts  useMUSD.ts  useRWAPool.ts  useRWAPoolFactory.ts  useSuperStake.ts
frontend/src/lib/: apollo-client.ts
frontend/src/providers/: ApolloProvider.tsx
frontend/src/utils/: decimals.ts  format.ts
smart-contracts/compliance-pool/: .env  .gitignore  foundry.toml
smart-contracts/mUSD/: flatten-musd.sol  foundry.toml
smart-contracts/super-stake/: foundry.toml  mockswapper.sol
(+30 files in other folders)
