[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
boundless-market = "1.2.0"
once_cell = "1.21.3"
alloy-signer-wallet = "0.0.0-reserved"
k256 = "0.13.4"
reqwest = "0.12.28"
hex = "0.4.3"
url = "2.5.7"
alloy = "1.2.1"
alloy-primitives = "1.5.2"
dotenvy = "0.15"
